--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,6 +6,6 @@ ssl_unix_group: "root"
 ssl_crt: ""
 ssl_key: ""
 
-ssl_crt_filename: "ssl.crt"
-ssl_key_filename: "ssl.key"
-ssl_pem_filename: "ssl.pem"
+ssl_crt_file: "ssl.crt"
+ssl_key_file: "ssl.key"
+ssl_pem_file: "ssl.pem"
