--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -14,6 +14,7 @@
     dest="{{ ssl_crt_file }}"
     owner="{{ ssl_unix_user }}"
     group="{{ ssl_unix_group }}"
+    backup="yes"
     mode="0600"
 
 - name: Dump SSL Private Key
@@ -22,6 +23,7 @@
     dest="{{ ssl_key_file }}"
     owner="{{ ssl_unix_user }}"
     group="{{ ssl_unix_group }}"
+    backup="yes"
     mode="0600"
   no_log: true
 
@@ -31,5 +33,6 @@
     dest="{{ ssl_pem_file }}"
     owner="{{ ssl_unix_user }}"
     group="{{ ssl_unix_group }}"
+    backup="yes"
     mode="0600"
   no_log: true
