updating to use puppet's defines 1st

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,5 +8,5 @@ ssl_dir: "/etc/ssl"
 ssl_crt_file: "{{ ssl_dir }}/ssl.crt"
 ssl_key_file: "{{ ssl_dir }}/ssl.key"
 ssl_pem_file: "{{ ssl_dir }}/ssl.pem"
-ssl_ciphers: "ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS"
+ssl_ciphers: "{{ apache_ssl_cipher_suite | default('ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS') }}"
 ssl_options: "no-sslv3 no-tls-tickets"
