--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,11 +2,15 @@
 
 ssl_crt: ""
 ssl_key: ""
+ssl_chain_crt: ""
 ssl_unix_user: "root"
 ssl_unix_group: "root"
 ssl_dir: "/etc/ssl"
 ssl_crt_file: "{{ ssl_dir }}/ssl.crt"
 ssl_key_file: "{{ ssl_dir }}/ssl.key"
 ssl_pem_file: "{{ ssl_dir }}/ssl.pem"
+ssl_chain_file: "{{ ssl_dir }}/chain.crt"
 ssl_ciphers: "{{ apache_ssl_cipher_suite | default('ECDH+AESGCM:DH+AESGCM:ECDH+AES256:DH+AES256:ECDH+AES128:DH+AES:ECDH+3DES:DH+3DES:RSA+AESGCM:RSA+AES:RSA+3DES:!aNULL:!MD5:!DSS') }}"
 ssl_options: "no-sslv3 no-tls-tickets"
+ssl_dhparam_file: "{{ ssl_dir }}/dhparam.pem"
+ssl_nginx_protocols: "TLSv1.1 TLSv1.2"
