--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -59,5 +59,5 @@
   register: dhparam
 
 - name: Create dhparam
-  command: openssl dhparam 2048 -out "{{ ssl_dhparam_file }}"
+  command: openssl dhparam -dsaparam -out "{{ ssl_dhparam_file }}" 2048
   when: not dhparam.stat.exists
